--- a/4/index.html
+++ b/4/index.html
@@ -6,7 +6,7 @@
 <!-- viewport修正 -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>シドニーセミナー... パート3</title>
+<title>X-Power 遂に公開！</title>
 
 <link rel="stylesheet" href="../images/style.css">
 
@@ -54,11 +54,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </header>
 <div id="content">
 
-      <!--div class="caption">パート2</div-->
+      <!--div class="caption">パート2</div>
   <div id="left">
-    <!--div class="image">
+    <div class="image">
       <img src="./files/thumb.png" alt="part2">
-        </div-->
+        </div>
 
     <div class="list">
 - ケニアの女性を妊娠させる方法<br>
@@ -76,37 +76,41 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 
       <br>
-  </div>
+  </div-->
 
   <div id="right">
 
 <div class="step1box">
-        <!--div class="step">Step 1：無料で再生</div-->
-<div class="arrow">
-      <img src="../images/audio_arrow2neo.png">
+        <div class="step">Step 1：寿命を10%伸ばす法を聴く</div>
+
+<div class="arrow" style="display: block!important;padding-top: 30px;padding-bottom: 0px;">
+      <img src="../images/audio_arrow6.png" width="50px">
 </div>
 
-<div class="playbtn" style="padding-top: 70px!important;">
-          <img id="ui1" src="files/audio_play.png" height="245px" />
+<div class="playbtn" style="padding-top: 0px;padding-bottom: 20px;">
+          <img id="ui1" src="../images/video_play.png" />
 </div>
-        <audio id="audio1" preload="metadata">
-          <source src="https://xcapitalism.com/XPower/3/files/xpower3.mp3" type="audio/mp3" />
+        <audio id="audio1" preload="metadata" style="display: block;">
+          <source src="https://xcapitalism.com/XPower/4/files/xpower4.mp3" type="audio/mp3" />
           <p>この音声はHTML5プレイヤーで再生されます。<br />
           最新版の<a href="https://www.google.co.jp/chrome/browser/desktop/" target="_blank">GoogleCrome</a>、
           <a href="https://www.mozilla.org/ja/firefox/new/" target="_blank">Firefox</a>などをご利用ください。</p>
         </audio>
     <!-- / Audio -->
+
+
     <div id="download">
       <div class="download">
-      <a href="https://xcapitalism.com/XPower/3/files/xpower3.mp3" target="_blank">右クリックで音声を保存</a>
+      <a href="https://xcapitalism.com/XPower/4/files/xpower4.mp3" target="_blank">右クリックで音声を保存</a>
     </div>
   </div>
+
 
   </div>
 
 
 <div class="step2box">
-        <div class="step2">感想を送って次を聴く</div>
+        <div class="step2">Step 2：仙人さんにお願いをする</div>
 
 
             <!-- FORM REPEAT -->
@@ -114,7 +118,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <form id="submission-form-2" class="mirai-form light-mode-form" action="https://x-sennin.com/api/register/tagandmail.php" method="POST">
                      <!-- Config fields -->
                     <input type="hidden" name="tag_id" value="14032264">
-                    <input type="hidden" name="form_id" value="xpower-promo-3">
+                    <input type="hidden" name="form_id" value="xpower-promo-4">
                     
                     <div class="form-group">
                         <label for="name-2">名前: <span class="required">*</span></label>
@@ -160,7 +164,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <li class="none"><a href="../2/" target="_blank">
           <span class="thumb"><img src="../images/thumb2.png" width="210px" /></span>
         </a></li>
-
+        <li class="none"><a href="../3/" target="_blank">
+          <span class="thumb"><img src="../images/thumb3.png" width="210px" /></span>
+        </a></li>
 
 
       </ul>
