--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ document.addEventListener('DOMContentLoaded', function() {
             .then(response => {
                 if (response.ok) {
                     // 成功時：遷移
-                    window.location.href = 'https://www.senninx.com/xpower/mrkozaki_justin';
+                    window.location.href = 'https://www.xsennin.com/xpower/mrkozaki_justin';
                 } else {
                     // サーバーエラー時：ボタンを復帰させる
                     throw new Error('Server returned ' + response.status);
